implementações de pagamento

--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -1,3 +1,19 @@
-<footer>
-    aqui estou
+<footer style="margin-top: 5rem;" class="py-3">
+  <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+    <li class="nav-item">
+      <a href="/index.html" class="nav-link px-2 text-muted">Home</a>
+    </li>
+    <li class="nav-item">
+      <a href="/html/contato.html" class="nav-link px-2 text-muted">Contato</a>
+    </li>
+    <li class="nav-item">
+      <a href="/index.html#produtos" class="nav-link px-2 text-muted"
+        >Produtos</a
+      >
+    </li>
+    <li class="nav-item">
+      <a href="/html/sobre.html" class="nav-link px-2 text-muted">Sobre</a>
+    </li>
+  </ul>
+  <p class="text-center text-muted">© 2024 PhoneStation, Inc</p>
 </footer>
