--- a/components/header/header.html
+++ b/components/header/header.html
@@ -26,7 +26,7 @@
     </div>
     <nav>
       <ul class="list-inline">
-        <li class="list-inline-item"><a href="/html/index.html">Home</a></li>
+        <li class="list-inline-item"><a href="/index.html">Home</a></li>
         <li class="list-inline-item"><a href="/html/sobre.html">Sobre nós</a></li>
         <li class="list-inline-item"><a href="/html/contato.html">Contato</a></li>
       </ul>
